--- a/beer-wizard/package.json
+++ b/beer-wizard/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
